# js-sdk

./: .dockerignore  .editorconfig  .env.ci  .env.sample  .eslintignore  .eslintrc.json  .gitignore  .lintstagedrc.js  .nxignore  .prettierignore  .prettierrc  .syncpackrc  AGENTS.md  CHANGELOG.md  CONTRIBUTION.md  Cargo.toml  LICENSE  LICENSE.md  README.md  [object Object]test  ana-server.ts  ana.ts  aws.sh  babel.config.json  bun-link.sh  bun.lockb  consolelog-test.md  ctx.md  cypress.config.ts  dev  doc.css  example.js  jest.e2e.config.ts  jest.preset.js  jest.setup.js  lerna.json  link-packages.sh  lit-build.config.json  lit-projects.json  lit.config.json  (+22 more)
.changeset/: afraid-moons-go.md  all-memes-hang.md  big-tools-study.md  bitter-nights-create.md  bitter-sloths-pick.md  breezy-dolls-repair.md  bright-rings-dream.md  brown-houses-matter.md  chatty-poets-grow.md  chilly-crabs-say.md  chilly-rice-stand.md  clean-dogs-obey.md  clever-buttons-sit.md  clever-hairs-hope.md  clever-peas-travel.md  clever-sheep-walk.md  cold-dancers-push.md  cold-singers-pay.md  config.json  crazy-clouds-press.md  cuddly-comics-take.md  cuddly-rats-say.md  cuddly-rats-yawn.md  cuddly-sloths-clap.md  curvy-trams-fly.md  cute-bottles-ask.md  cute-dingos-rush.md  cute-experts-clap.md  cyan-bears-invent.md  cyan-knives-see.md  dirty-baboons-happen.md  dull-tables-jump.md  dull-walls-notice.md  easy-mugs-fry.md  eighty-adults-talk.md  evil-phones-heal.md  famous-breads-stop.md  fancy-pillows-bake.md  few-clouds-do.md  fifty-loops-clean.md  (+84 more)
.claude/: settings.local.json
.ctx/: ctx.md  generate-local-network-context.md
.github/: CODEOWNERS
.husky/: commit-msg  pre-commit
crates/lit-e2e/: Cargo.toml  README.md
crates/lit-e2e/src/: lib.rs
crates/lit-sdk/: Cargo.toml
crates/lit-sdk/examples/: execute_js.rs  naga_encrypt.rs  pkp_sign_ethereum.rs
crates/lit-sdk/src/: accs.rs  auth.rs  chain.rs  client.rs  crypto.rs  e2ee.rs  error.rs  lib.rs  network.rs  pkp_signer.rs  session.rs  sev_snp.rs  types.rs  wrapped_keys.rs
crates/lit-sdk/tests/: accs_hash.rs
cypress/: cypress.json  tsconfig.json
doc/: index.html  modules.html
docs/: README.md  changelog.mdx  custom.css  docs.json  index.mdx  lit-pricing-constants.js
e2e/: README.md  example.js  (+2 more)
e2e-nodejs/: 00-setup.mjs  README.md  index.mjs  loader.mjs  network-context.mjs  network-context.ts  polyfills.mjs  template.mjs  test-lit-action-1-sig.mjs  test-lit-action-2-sigs.mjs  test-lit-action-json-response.mjs  test-lit-action-log.mjs  test-lit-action-single-sign.mjs
e2e-tests/: bun-e2e.test.ts  jest-e2e.test.ts  jest.config.ts  tsconfig.json
(+1685 files in other folders)
