[package]
name = "lit-e2e"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = ["bls-wasm"]
bls-wasm = ["lit-sdk/bls-wasm"]

[dependencies]
lit-sdk = { path = "../lit-sdk", default-features = false }
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
base64ct = { version = "=1.5.3", features = ["alloc"] }
ethers = { version = "2", default-features = false, features = ["rustls", "abigen"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
rand = "0.8"
serial_test = "3"
bs58 = "0.5"
sha2 = "0.10"
ed25519-dalek = "2"
siwe = "0.5"
http = "0.2"
iri-string = "0.6"
